--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+3-20 [美议员关注中国对台湾压迫寻求更强威慑方式](/articles/voa/1042148.md)
+
+3-20 [阿拉斯加会谈争锋相对 美议员：中方行为暴露出缺乏自我意识](/articles/voa/1042149.md)
+
+3-20 [枪击惨案后拜登会晤亚裔美国人领袖 呼吁美国人团结起来反对仇恨](/articles/voa/1042150.md)
+
+3-20 [到底谁违反了外交礼仪？美中阿拉斯加会谈真相](/articles/voa/1042151.md)
+
 3-20 [美中结束高层会谈，美方：我们清醒地来，清醒地离开](/articles/voa/1042152.md)
 
 3-20 [布林肯将参加北约外长会议 与欧盟协商应对包括中国在内的共同挑战](/articles/voa/1042153.md)
@@ -592,12 +600,4 @@
 3-5 [白宫要义: 拜登总统: 基础设施建设将增强美国竞争力](/articles/voa/1042446.md)
 
 3-5 [强生疫苗开始发放 接种公平受到关注](/articles/voa/1042447.md)
-
-3-5 [香港法院裁定47名民主活动人士继续被羁押](/articles/voa/1042448.md)
-
-3-5 [气候变化是否能为美中合作敞开大门？](/articles/voa/1042449.md)
-
-3-5 [40名科学家联名支持被控隐瞒参与中国千人计划的哈佛教授](/articles/voa/1042450.md)
-
-3-5 [美国会警察局希望国民警卫队继续留守](/articles/voa/1042451.md)
 
