--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-20 [纽约大学学生上海被拘事件 会否引发寒蝉效应？](/articles/voa/1042147.md)
+
 3-20 [美议员关注中国对台湾压迫寻求更强威慑方式](/articles/voa/1042148.md)
 
 3-20 [阿拉斯加会谈争锋相对 美议员：中方行为暴露出缺乏自我意识](/articles/voa/1042149.md)
@@ -598,6 +600,4 @@
 3-5 [报道：美国务卿与防长即将访日 讨论外交与安全问题](/articles/voa/1042445.md)
 
 3-5 [白宫要义: 拜登总统: 基础设施建设将增强美国竞争力](/articles/voa/1042446.md)
-
-3-5 [强生疫苗开始发放 接种公平受到关注](/articles/voa/1042447.md)
 
