--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,13 +1,15 @@
 中国数字时代
 ------
 
+3-20 [澎湃思想市场 | “杀马特”进入主流视野之路：审美自由掩盖的农民工困境](/articles/cdt/384785.md)
+
 3-20 [【立此存照】网信办、公安部约谈11家企业 为中国版Clubhouse“划红线”](/articles/cdt/384787.md)
 
 3-19 [【图说天朝】解放军部队家属院通知要求禁停特斯拉](/articles/cdt/384800.md)
 
 3-19 [大象公会｜中国大学更名学](/articles/cdt/384802.md)
 
-3-19 [【网络民议】中美会谈到底是哪方严重超时了？不过看来中方又赢了](/articles/cdt/384814.md)
+3-19 [【网络民议】 “墙内墙外两个世界，连时间单位都不一样了”](/articles/cdt/384814.md)
 
 3-19 [【404聊天室】与曾和亚裔按摩女工工作过的一线工作者，聊一聊在美亚裔按摩女工的处境](/articles/cdt/384816.md)
 
@@ -598,6 +600,4 @@
 2-6 [雪夜访｜悼念最早迎战新冠病毒而殉职者之一刘徳炎医生](/articles/cdt/386144.md)
 
 2-6 [莫狄骁的山房 | 纪念一位普通人](/articles/cdt/386145.md)
-
-2-6 [端传媒 | 四问香港电话卡实名制（节选）](/articles/cdt/386158.md)
 
