--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-20 [海边的西塞罗 | 给讲《石壕吏》的康震教授，普及一点诗歌常识](/articles/cdt/384783.md)
+
 3-20 [澎湃思想市场 | “杀马特”进入主流视野之路：审美自由掩盖的农民工困境](/articles/cdt/384785.md)
 
 3-20 [【立此存照】网信办、公安部约谈11家企业 为中国版Clubhouse“划红线”](/articles/cdt/384787.md)
@@ -598,6 +600,4 @@
 2-6 [维舟｜让我安静几天](/articles/cdt/386143.md)
 
 2-6 [雪夜访｜悼念最早迎战新冠病毒而殉职者之一刘徳炎医生](/articles/cdt/386144.md)
-
-2-6 [莫狄骁的山房 | 纪念一位普通人](/articles/cdt/386145.md)
 
