--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-20 [海外观众将被无缘东京奥运会](/articles/dw/1043410.md)
+
 3-20 [共同警惕中国：美印关系揭开历史新篇](/articles/dw/1043411.md)
 
 3-20 [美中高层会谈：针锋相对 无果而终](/articles/dw/1043412.md)
@@ -598,6 +600,4 @@
 2-25 [对华逆差巨大 印度出新政奖励本土产品](/articles/dw/1043708.md)
 
 2-25 [芯片短缺压力大 拜登命令审视供应链](/articles/dw/1043709.md)
-
-2-25 [全球疫苗共享计划首批配送抵达加纳](/articles/dw/1043710.md)
 
