--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-20 [杨洁篪发飙阿拉斯加或给美国对华政策增添新的变数](/articles/voa/1042140.md)
+
+3-20 [美中驻联合国大使就种族主义发生争执](/articles/voa/1042141.md)
+
 3-20 [美中驻联合国大使就种族主义发生争执](/articles/voa/1042142.md)
 
 3-20 [新任美国贸易代表誓言促进公平增长](/articles/voa/1042143.md)
@@ -596,8 +600,4 @@
 3-5 [报告：英国大学对中国的“战略依赖”对英构成风险](/articles/voa/1042438.md)
 
 3-5 [哥伦比亚大学奖学金为难民打造美国梦的阶梯](/articles/voa/1042439.md)
-
-3-5 [记者成为缅甸军政府暴力攻击的目标](/articles/voa/1042440.md)
-
-3-5 [美国众议院通过了警察执法改革法案](/articles/voa/1042441.md)
 
