--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+3-21 [反亚裔种族主义加剧 德国也不例外](/articles/dw/1043407.md)
+
+3-20 [德语媒体：美国如何继续当好国际领袖](/articles/dw/1043408.md)
+
 3-20 [拜登登机时连跌三次 都是风的错？](/articles/dw/1043409.md)
 
 3-20 [海外观众将被无缘东京奥运会](/articles/dw/1043410.md)
@@ -596,8 +600,4 @@
 2-25 [GDP的2%用来“输血”:中国召开脱贫表彰大会](/articles/dw/1043705.md)
 
 2-25 [向华强父子移民台湾遭拒 民进党立委赞决定正确](/articles/dw/1043706.md)
-
-2-25 [向华强父子移民台湾申请遭拒 民进党立委赞“正确决定”](/articles/dw/1043707.md)
-
-2-25 [对华逆差巨大 印度出新政奖励本土产品](/articles/dw/1043708.md)
 
