--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,18 @@
 法广
 ------
 
+3-21 [巴基斯坦总理新冠病毒检测呈阳性，在家中隔离](/articles/rfi/1033058.md)
+
+3-21 [印防长评价与奥斯汀会谈：全面而富有成果](/articles/rfi/1033059.md)
+
+3-21 [澳外长：不会为重启对华对话而放弃原则和价值观](/articles/rfi/1033060.md)
+
+3-21 [戴琪上任美贸易代表 应对中国挑战纳首要工作之一](/articles/rfi/1033061.md)
+
+3-21 [马斯克否认特斯拉汽车被用于间谍说法](/articles/rfi/1033062.md)
+
+3-21 [爱沙尼亚科学家因充当中国间谍被判入狱三年](/articles/rfi/1033063.md)
+
 3-21 [土耳其退出欧洲女权伊斯坦布尔公约](/articles/rfi/1033064.md)
 
 3-20 [中美闭门会时谈了些什么？ - 法国报纸摘要](/articles/rfi/1033065.md)
@@ -588,16 +600,4 @@
 3-16 [阿斯利康：世卫将开会探讨相关问题](/articles/rfi/1033356.md)
 
 3-16 [拜登打破沉默      首次就科莫事件发声](/articles/rfi/1033357.md)
-
-3-16 [担心被用于军事目的 缅甸首颗卫星被日本扣留](/articles/rfi/1033358.md)
-
-3-16 [两名美驻香港总领事馆职员新冠病毒呈阳性反应](/articles/rfi/1033359.md)
-
-3-16 [澳议会阻止将中国在新疆所作所为定性为种族灭绝动议的表决](/articles/rfi/1033360.md)
-
-3-16 [《华尔街日报》：北京要求阿里巴巴出售媒体业务](/articles/rfi/1033361.md)
-
-3-16 [中国1-2月实际使用外资同比增长 - 今日经济](/articles/rfi/1033362.md)
-
-3-16 [英国违反脱欧协议，欧盟采取法律行动](/articles/rfi/1033363.md)
 
