--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-21 [奥运会主办方决定：本届东京夏奥会和残奥会不接待国外观众](/articles/voa/1042137.md)
+
 3-21 [中国禁止特斯拉汽车进入敏感区域？马斯克回应：不会用车当间谍](/articles/voa/1042138.md)
 
 3-20 [中资公司赴台抢夺人才 学者：国家支持的系统性挖角](/articles/voa/1042139.md)
@@ -598,6 +600,4 @@
 3-5 [国际社会对缅甸政变反应不一，缅甸军方才有恃无恐](/articles/voa/1042435.md)
 
 3-5 [美国国务院：与史瓦帝尼和台湾共创伙伴关系机会](/articles/voa/1042436.md)
-
-3-5 [语出惊人的预测：中国经济永远超不过美国](/articles/voa/1042437.md)
 
