--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-21 [【网络民议】长城很伟大，但你是修长城的人](/articles/cdt/384766.md)
+
 3-20 [正午故事 | 梁鸿：在大城市，老一辈农民工不会有漂泊感，白领才会有](/articles/cdt/384775.md)
 
 3-20 [维舟｜“少管闲事”：中国社会的群己权界](/articles/cdt/384779.md)
@@ -598,6 +600,4 @@
 2-7 [Matters | 面对新疆危机，一个 2020 年的普通人可以做些什么？](/articles/cdt/386136.md)
 
 2-6 [法广｜李文亮去世一周年 中国网络仍悲祭](/articles/cdt/386140.md)
-
-2-6 [BBC｜李文亮逝世周年 仍是民间记忆中的英雄 中国“吹哨人”们仍受打压](/articles/cdt/386141.md)
 
