--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+3-21 [2021年法语周和修造中的法语国际城](/articles/rfi/1033057.md)
+
 3-21 [巴基斯坦总理新冠病毒检测呈阳性，在家中隔离](/articles/rfi/1033058.md)
 
 3-21 [印防长评价与奥斯汀会谈：全面而富有成果](/articles/rfi/1033059.md)
@@ -598,6 +600,4 @@
 3-16 [意大利和西班牙加入停打阿斯利康疫苗行列](/articles/rfi/1033355.md)
 
 3-16 [阿斯利康：世卫将开会探讨相关问题](/articles/rfi/1033356.md)
-
-3-16 [拜登打破沉默      首次就科莫事件发声](/articles/rfi/1033357.md)
 
