--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+3-21 [孤立中国 深耕印度  美强调新德里在印太地区领导角色 - 要闻分析](/articles/rfi/1033051.md)
+
+3-21 [冰岛首都雷克雅末克附近火山爆发](/articles/rfi/1033052.md)
+
+3-21 [中国驻法使馆辱骂法国学者舆论震惊](/articles/rfi/1033053.md)
+
 3-21 [欧洲多国爆发民众示威抗议封锁措施 德国示威者与警方冲突](/articles/rfi/1033054.md)
 
 3-21 [奥斯汀会晤印度防长强调美印&quot;21世纪重要伙伴关系”](/articles/rfi/1033055.md)
@@ -594,10 +600,4 @@
 3-16 [AZ疫苗血栓疑云 德法等国加入停打行列 – 法国国际广播电台 - RFI](/articles/rfi/1033349.md)
 
 3-16 [创造历史 哈兰德成为美国首位原住民内阁首长 – 法国国际广播电台 - RFI](/articles/rfi/1033350.md)
-
-3-16 [来自戈壁滩的巨大沙尘暴使北京瘫痪 - 法国世界报](/articles/rfi/1033351.md)
-
-3-16 [多米诺骨牌效应：欧洲多国暂停打AZ疫苗 - 要闻分析](/articles/rfi/1033352.md)
-
-3-16 [美股攀升 道指与标普收在新高 – 法国国际广播电台 - RFI](/articles/rfi/1033353.md)
 
