--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+3-21 [阿拉斯加 中方的表现不可理喻 ？](/articles/rfi/1033049.md)
+
 3-21 [德国《商报》：美中关系迈入新的冰河时代](/articles/rfi/1033050.md)
 
 3-21 [孤立中国 深耕印度  美强调新德里在印太地区领导角色 - 要闻分析](/articles/rfi/1033051.md)
@@ -598,6 +600,4 @@
 3-16 [乌克兰无意停用AZ疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1033347.md)
 
 3-16 [委内瑞拉将不授权使用AZ疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1033348.md)
-
-3-16 [AZ疫苗血栓疑云 德法等国加入停打行列 – 法国国际广播电台 - RFI](/articles/rfi/1033349.md)
 
