--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+3-21 [纽约客 | 何伟：”中国制造“外交的兴起](/articles/cdt/384732.md)
+
+3-21 [剥洋葱people | 一间出租屋与300个蜗居抗癌的家庭](/articles/cdt/384736.md)
+
 3-21 [【网络民议】今天是孙志刚的忌日，请记住他](/articles/cdt/384752.md)
 
 3-21 [尖椒部落 | 外卖骑手盟主不见了，我们还能做什么？](/articles/cdt/384756.md)
@@ -596,8 +600,4 @@
 2-8 [【CDT周报】第三期：十年前他们是“网络时代知识布道者”  而如今是“犯罪嫌疑人”](/articles/cdt/386116.md)
 
 2-7 [为许志永呼吁，李翘楚被山东临沂警方带走](/articles/cdt/386122.md)
-
-2-7 [【网络民议】支持马金瑜，是基于对所有家庭暴力反对基础上的](/articles/cdt/386127.md)
-
-2-7 [法律园地｜医者李文亮列传：一个健康的社会不应该只有一种声音](/articles/cdt/386128.md)
 
