--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-21 [【朋友圈】遗老](/articles/cdt/384727.md)
+
 3-21 [北京大学出版社 | 1933年的今天纳粹建立第一个集中营，不少人表示支持](/articles/cdt/384730.md)
 
 3-21 [纽约客 | 何伟：”中国制造“外交的兴起](/articles/cdt/384732.md)
@@ -598,6 +600,4 @@
 2-8 [果壳 | 家暴受害者离开，不是她突然想通了，是她终于成功了](/articles/cdt/386112.md)
 
 2-8 [【网络民议】无审查，中国网民涌入Clubhouse谈新疆：这是华文公共空间的哈贝马斯时刻（附立场报道）](/articles/cdt/386113.md)
-
-2-8 [【CDT周报】第三期：十年前他们是“网络时代知识布道者”  而如今是“犯罪嫌疑人”](/articles/cdt/386116.md)
 
