--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-21 [菲律宾称2百多艘中国渔船出现在有争议岩礁](/articles/voa/1042131.md)
+
 3-21 [共同社：美日防长同意台海发生军事冲突时密切合作](/articles/voa/1042132.md)
 
 3-21 [中国说将与美国组建气候变化工作组](/articles/voa/1042133.md)
@@ -598,6 +600,4 @@
 3-5 [四名香港民主派初选案被告周五傍晚获得保释](/articles/voa/1042429.md)
 
 3-5 [两会：又见增长目标](/articles/voa/1042430.md)
-
-3-5 [江西省宣布全面取消城镇落户限制后的疑问](/articles/voa/1042431.md)
 
