--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-21 [菲律宾称2百多艘中国武装渔船出现在有争议岩礁 菲外长防长吁中国召回武装渔船](/articles/voa/1042129.md)
+
+3-21 [中国追逃一名网上侮辱戍边烈士的男子](/articles/voa/1042130.md)
+
 3-21 [菲律宾称2百多艘中国渔船出现在有争议岩礁](/articles/voa/1042131.md)
 
 3-21 [共同社：美日防长同意台海发生军事冲突时密切合作](/articles/voa/1042132.md)
@@ -596,8 +600,4 @@
 3-5 [澳大利亚媒体因收到人权组织投诉暂停播放中国官媒节目](/articles/voa/1042427.md)
 
 3-5 [中国军费跨上2000亿美元台阶，目标：尽快缩小与美差距](/articles/voa/1042428.md)
-
-3-5 [四名香港民主派初选案被告周五傍晚获得保释](/articles/voa/1042429.md)
-
-3-5 [两会：又见增长目标](/articles/voa/1042430.md)
 
