--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -33,6 +33,8 @@
 
 3-20 [【立此存照】网信办、公安部约谈11家企业 为中国版Clubhouse“划红线”](/articles/cdt/384787.md)
 
+3-22 [【CDT敏感词周报】第十六期：制裁王晨、郑国成、许艳敲诈案、Signal被墙、取消奥斯卡直播](/articles/cdt/384795.md)
+
 3-19 [【图说天朝】解放军部队家属院通知要求禁停特斯拉](/articles/cdt/384800.md)
 
 3-19 [大象公会｜中国大学更名学](/articles/cdt/384802.md)
@@ -598,6 +600,4 @@
 2-8 [德国之声｜澳籍记者成蕾被捕 被控泄漏中国国家机密](/articles/cdt/386101.md)
 
 2-8 [全现在｜困守五环外城中村，外卖骑手们用花生米凑一桌年味](/articles/cdt/386102.md)
-
-2-27 [【CDT 审查月报】2021年2月中国言论审查纪要：“一个健康的社会不应该只有一种声音”再次响起](/articles/cdt/386106.md)
 
