--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-22 [菲律宾敦促中国武装渔船立刻离开争议岛礁](/articles/dw/1043393.md)
+
 3-21 [亚特兰大枪击案后 民众集会反对暴力声援亚裔](/articles/dw/1043394.md)
 
 3-21 [贝多芬第八交响曲第四乐章](/articles/dw/1043395.md)
@@ -598,6 +600,4 @@
 2-26 [德国卫生部长购豪华别墅 惹怒媒体](/articles/dw/1043691.md)
 
 2-26 [春暖花开东风未见 凤梨进口禁令先来](/articles/dw/1043692.md)
-
-2-26 [香港中大与学生会划清界限  学生会指校方打压](/articles/dw/1043693.md)
 
