--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+3-22 [墨西哥因防Covid-19 禁传统春分仪式](/articles/rfi/1033031.md)
+
 3-22 [约220艘中国渔船在争议海域集结 菲防长：严重关切](/articles/rfi/1033032.md)
 
 3-22 [法防长：绝对要减少在一些关键领域对中国的依赖](/articles/rfi/1033033.md)
@@ -598,6 +600,4 @@
 3-16 [美官员：共军现代化威胁台湾 – 法国国际广播电台 - RFI](/articles/rfi/1033329.md)
 
 3-16 [纳瓦尼服刑自述如在集中营 夜里一小时被叫醒一次 – 法国国际广播电台 - RFI](/articles/rfi/1033330.md)
-
-3-16 [马斯克新增头衔：特斯拉「技术大王」 – 法国国际广播电台 - RFI](/articles/rfi/1033331.md)
 
