--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-22 [美联社：伊朗威胁美军基地和高级将领](/articles/voa/1042125.md)
+
 3-22 [美国国土安全部部长称美墨边境是安全的](/articles/voa/1042126.md)
 
 3-22 [亚特兰大枪击案揭示了疫情期间世界各地的反亚裔仇恨犯罪](/articles/voa/1042127.md)
@@ -598,6 +600,4 @@
 3-6 [特朗普行政令继续有效，小米、箩筐被剔除出富时罗素指数](/articles/voa/1042423.md)
 
 3-6 [两会：又见增长目标](/articles/voa/1042424.md)
-
-3-6 [中共拟对香港选举制度下重手，普选目标或被剔除出基本法](/articles/voa/1042425.md)
 
