--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-22 [“国际消除种族歧视日”，拜登政府努力打击系统性种族主义](/articles/voa/1042124.md)
+
 3-22 [美联社：伊朗威胁美军基地和高级将领](/articles/voa/1042125.md)
 
 3-22 [美国国土安全部部长称美墨边境是安全的](/articles/voa/1042126.md)
@@ -598,6 +600,4 @@
 3-6 [学者回应全球经济自由排名剔除香港 反映一国两制已经完结](/articles/voa/1042422.md)
 
 3-6 [特朗普行政令继续有效，小米、箩筐被剔除出富时罗素指数](/articles/voa/1042423.md)
-
-3-6 [两会：又见增长目标](/articles/voa/1042424.md)
 
