--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-22 [美日合作应对台海冲突 即将访美的菅义伟将对北京更强硬](/articles/voa/1042123.md)
+
 3-22 [“国际消除种族歧视日”，拜登政府努力打击系统性种族主义](/articles/voa/1042124.md)
 
 3-22 [美联社：伊朗威胁美军基地和高级将领](/articles/voa/1042125.md)
@@ -598,6 +600,4 @@
 3-6 [芯片短缺冲击全球 专家有信心美国仍将是最大赢家](/articles/voa/1042421.md)
 
 3-6 [学者回应全球经济自由排名剔除香港 反映一国两制已经完结](/articles/voa/1042422.md)
-
-3-6 [特朗普行政令继续有效，小米、箩筐被剔除出富时罗素指数](/articles/voa/1042423.md)
 
