--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-22 [康明凯将受审 妻子盼政府实际行动](/articles/dw/1043390.md)
+
 3-22 [瑞士首发对中战略文件 北京批「贴恶意标签」](/articles/dw/1043391.md)
 
 3-22 [菲律宾：抗议两百多艘中方武装船只侵入](/articles/dw/1043392.md)
@@ -598,6 +600,4 @@
 2-26 [德国一主持人涉嫌“辱韩”引众怒](/articles/dw/1043688.md)
 
 2-26 [德语媒体：习近平的脱贫战真的“全面获胜”了吗？](/articles/dw/1043689.md)
-
-2-26 [中印外长通话 拟建立沟通热线](/articles/dw/1043690.md)
 
