--- a/articles/cdt/384713.md
+++ b/articles/cdt/384713.md
@@ -1,5 +1,5 @@
 <!--1616341324000-->
-[【立此存照 】奉旨翻墙](https://chinadigitaltimes.net/chinese/663862.html)
+[【立此存照 】奉旨翻墙：东风app（跨境交流专用通道）](https://chinadigitaltimes.net/chinese/663862.html)
 ------
 
-<p>据 Twitter 用户<a href="https://twitter.com/fangshimin/status/1373435697181253636" title="方舟子">方舟子</a>发布的图片，疑似陕西西安某机关单位对外宣传处对意识形态处、宣教处、新闻发布处等部门发出的通知，“要求部机关确定5人作为跨境交流专用通道使用人员”，并要求相关人员填写《东风 App 使用人员信息登记表》。</p><p><noscript><img src="https://chinadigitaltimes.net/chinese/files/2021/03/fqs.jpg" alt="img"></noscript><img class="lazyload" src="data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%20210%20140%22%3E%3C/svg%3E" data-src="https://chinadigitaltimes.net/chinese/files/2021/03/fqs.jpg" alt="img"></p><p><strong>以下评论由中国数字时代收集自 Twitter：</strong></p><blockquote><p> @p8i7gSR0YCOkfQU：只许州官放火不许百姓点灯。</p><p>@Sophies18764365：跨境交流，又学了一个新词儿。</p><p>@jerry16789：特许翻墙+在编五毛+合同工五毛+志愿五毛，生态就起来了。</p><p>@zm13825253969：其实是门生意。</p><p>@聪聪Lu：这开头的几个部门浓浓的真理部色彩。</p><p>@科得自：翻墙兵。</p><p>@cnwlins：这是命令翻墙。</p></blockquote><div class="addtoany_share_save_container addtoany_content addtoany_content_bottom"><div class="a2a_kit a2a_kit_size_32 addtoany_list" data-a2a-url="https://chinadigitaltimes.net/chinese/663862.html" data-a2a-title="【立此存照 】奉旨翻墙"><a class="a2a_button_facebook" href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F663862.html&amp;linkname=%E3%80%90%E7%AB%8B%E6%AD%A4%E5%AD%98%E7%85%A7%20%E3%80%91%E5%A5%89%E6%97%A8%E7%BF%BB%E5%A2%99" title="Facebook" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_twitter" href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F663862.html&amp;linkname=%E3%80%90%E7%AB%8B%E6%AD%A4%E5%AD%98%E7%85%A7%20%E3%80%91%E5%A5%89%E6%97%A8%E7%BF%BB%E5%A2%99" title="Twitter" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_whatsapp" href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F663862.html&amp;linkname=%E3%80%90%E7%AB%8B%E6%AD%A4%E5%AD%98%E7%85%A7%20%E3%80%91%E5%A5%89%E6%97%A8%E7%BF%BB%E5%A2%99" title="WhatsApp" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_telegram" href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F663862.html&amp;linkname=%E3%80%90%E7%AB%8B%E6%AD%A4%E5%AD%98%E7%85%A7%20%E3%80%91%E5%A5%89%E6%97%A8%E7%BF%BB%E5%A2%99" title="Telegram" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_email" href="https://www.addtoany.com/add_to/email?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F663862.html&amp;linkname=%E3%80%90%E7%AB%8B%E6%AD%A4%E5%AD%98%E7%85%A7%20%E3%80%91%E5%A5%89%E6%97%A8%E7%BF%BB%E5%A2%99" title="Email" rel="nofollow noopener" target="_blank"></a><a class="a2a_dd addtoany_share_save addtoany_share" href="https://www.addtoany.com/share"></a></div></div>
+<p>据 Twitter 用户<a href="https://twitter.com/fangshimin/status/1373435697181253636" title="方舟子">方舟子</a>发布的图片，疑似陕西西安某机关单位对外宣传处对意识形态处、宣教处、新闻发布处等部门发出的通知，“要求部机关确定5人作为跨境交流专用通道使用人员”，并要求相关人员填写《东风 App 使用人员信息登记表》。</p><p><noscript><img src="https://chinadigitaltimes.net/chinese/files/2021/03/fqs.jpg" alt="img"></noscript><img class="lazyload" src="data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%20210%20140%22%3E%3C/svg%3E" data-src="https://chinadigitaltimes.net/chinese/files/2021/03/fqs.jpg" alt="img"></p><p><strong>以下评论由中国数字时代收集自 Twitter：</strong></p><blockquote><p> @p8i7gSR0YCOkfQU：只许州官放火不许百姓点灯。</p><p>@Sophies18764365：跨境交流，又学了一个新词儿。</p><p>@jerry16789：特许翻墙+在编五毛+合同工五毛+志愿五毛，生态就起来了。</p><p>@zm13825253969：其实是门生意。</p><p>@聪聪Lu：这开头的几个部门浓浓的真理部色彩。</p><p>@科得自：翻墙兵。</p><p>@cnwlins：这是命令翻墙。</p></blockquote><div class="addtoany_share_save_container addtoany_content addtoany_content_bottom"><div class="a2a_kit a2a_kit_size_32 addtoany_list" data-a2a-url="https://chinadigitaltimes.net/chinese/663862.html" data-a2a-title="【立此存照 】奉旨翻墙：东风app（跨境交流专用通道）"><a class="a2a_button_facebook" href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F663862.html&amp;linkname=%E3%80%90%E7%AB%8B%E6%AD%A4%E5%AD%98%E7%85%A7%20%E3%80%91%E5%A5%89%E6%97%A8%E7%BF%BB%E5%A2%99%EF%BC%9A%E4%B8%9C%E9%A3%8Eapp%EF%BC%88%E8%B7%A8%E5%A2%83%E4%BA%A4%E6%B5%81%E4%B8%93%E7%94%A8%E9%80%9A%E9%81%93%EF%BC%89" title="Facebook" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_twitter" href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F663862.html&amp;linkname=%E3%80%90%E7%AB%8B%E6%AD%A4%E5%AD%98%E7%85%A7%20%E3%80%91%E5%A5%89%E6%97%A8%E7%BF%BB%E5%A2%99%EF%BC%9A%E4%B8%9C%E9%A3%8Eapp%EF%BC%88%E8%B7%A8%E5%A2%83%E4%BA%A4%E6%B5%81%E4%B8%93%E7%94%A8%E9%80%9A%E9%81%93%EF%BC%89" title="Twitter" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_whatsapp" href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F663862.html&amp;linkname=%E3%80%90%E7%AB%8B%E6%AD%A4%E5%AD%98%E7%85%A7%20%E3%80%91%E5%A5%89%E6%97%A8%E7%BF%BB%E5%A2%99%EF%BC%9A%E4%B8%9C%E9%A3%8Eapp%EF%BC%88%E8%B7%A8%E5%A2%83%E4%BA%A4%E6%B5%81%E4%B8%93%E7%94%A8%E9%80%9A%E9%81%93%EF%BC%89" title="WhatsApp" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_telegram" href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F663862.html&amp;linkname=%E3%80%90%E7%AB%8B%E6%AD%A4%E5%AD%98%E7%85%A7%20%E3%80%91%E5%A5%89%E6%97%A8%E7%BF%BB%E5%A2%99%EF%BC%9A%E4%B8%9C%E9%A3%8Eapp%EF%BC%88%E8%B7%A8%E5%A2%83%E4%BA%A4%E6%B5%81%E4%B8%93%E7%94%A8%E9%80%9A%E9%81%93%EF%BC%89" title="Telegram" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_email" href="https://www.addtoany.com/add_to/email?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F663862.html&amp;linkname=%E3%80%90%E7%AB%8B%E6%AD%A4%E5%AD%98%E7%85%A7%20%E3%80%91%E5%A5%89%E6%97%A8%E7%BF%BB%E5%A2%99%EF%BC%9A%E4%B8%9C%E9%A3%8Eapp%EF%BC%88%E8%B7%A8%E5%A2%83%E4%BA%A4%E6%B5%81%E4%B8%93%E7%94%A8%E9%80%9A%E9%81%93%EF%BC%89" title="Email" rel="nofollow noopener" target="_blank"></a><a class="a2a_dd addtoany_share_save addtoany_share" href="https://www.addtoany.com/share"></a></div></div>
