--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+3-22 [拜登刺激方案有望拉动全球经济](/articles/ft/1045877.md)
+
 3-22 [中美高层会谈中的一条“金句”及译文浅析](/articles/ft/1045878.md)
 
 3-22 [负利率之下，技术如何影响金融体系现代化](/articles/ft/1045879.md)
@@ -598,6 +600,4 @@
 1-28 [A股对国际资本有多大吸引力？](/articles/ft/1046175.md)
 
 1-28 [每周时事分析：中美关系需实现综合力量平衡方能稳定](/articles/ft/1046176.md)
-
-1-28 [拜登政府或将开创中国对美直接投资新时代](/articles/ft/1046177.md)
 
