--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-22 [台湾开打AZ疫苗 专家称安全无虞](/articles/dw/1043389.md)
+
 3-22 [康明凯将受审 妻子盼政府实际行动](/articles/dw/1043390.md)
 
 3-22 [瑞士首发对中战略文件 北京批「贴恶意标签」](/articles/dw/1043391.md)
@@ -598,6 +600,4 @@
 2-26 [美国警方：特朗普支持者欲袭击国会](/articles/dw/1043687.md)
 
 2-26 [德国一主持人涉嫌“辱韩”引众怒](/articles/dw/1043688.md)
-
-2-26 [德语媒体：习近平的脱贫战真的“全面获胜”了吗？](/articles/dw/1043689.md)
 
