--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+3-22 [李强好书伴读｜野夫：从遮蔽的往事中找到一代人的苦衷](/articles/cdt/384700.md)
+
+3-22 [【CDT周报】第九期：白日一删尽，暗夜泪自流。欲穷清白目，请君入瓮楼。](/articles/cdt/384701.md)
+
 3-22 [【404文库】曹教授｜脱离人民群众的包子真的狗不理了](/articles/cdt/384707.md)
 
 3-21 [【立此存照 】奉旨翻墙：东风app（跨境交流专用通道）](/articles/cdt/384713.md)
@@ -596,8 +600,4 @@
 2-9 [【网络民议】言论自由只存在了一周？ClubHouse在墙国被墙](/articles/cdt/386092.md)
 
 2-8 [【异闻观止】浙江嘉兴首个“劳动者维权异常名录”公布  亮剑“职场碰瓷”](/articles/cdt/386094.md)
-
-2-8 [【立此存照】烈士二区1排21号 有位“不可告人的烈士”](/articles/cdt/386099.md)
-
-2-8 [德国之声｜澳籍记者成蕾被捕 被控泄漏中国国家机密](/articles/cdt/386101.md)
 
