--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-22 [拜登先生，别再对中国“放狠话”了](/articles/nyt/1047061.md)
+
 3-22 [中韩民众如何看待亚特兰大枪击案](/articles/nyt/1047062.md)
 
 3-22 [敌意与分歧：无果而终的美中高层会晤释放了何种信号](/articles/nyt/1047063.md)
@@ -598,6 +600,4 @@
 1-4 [想住在海边？你的六个绝佳新选择](/articles/nyt/1047359.md)
 
 1-4 [台湾靠封锁成功抗疫，但能持续多久？](/articles/nyt/1047360.md)
-
-1-4 [傅聪，选择自由的“钢琴诗人”](/articles/nyt/1047361.md)
 
