--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-22 [布林肯访问北约、欧盟 聚焦如何共同应对中国挑战等议题](/articles/voa/1042085.md)
+
+3-22 [台陆委会主委：对岸应停止强加政治框架及军事威胁](/articles/voa/1042086.md)
+
 3-22 [北京庭审加拿大前外交官康明凯 近30名外交官庭外声援加拿大](/articles/voa/1042087.md)
 
 3-22 [洛杉矶亚裔反歧视集会，悼念亡者呼吁抗争](/articles/voa/1042088.md)
@@ -596,8 +600,4 @@
 3-8 [结束四天访问行程 教宗周一飞离伊拉克](/articles/voa/1042383.md)
 
 3-8 [中共在建党百年前强化以习思想指导高校党建](/articles/voa/1042384.md)
-
-3-8 [西藏抗暴62周年 台立委：西藏问题就是台湾问题](/articles/voa/1042385.md)
-
-3-8 [缅甸举行大罢工罢市 继续抗议军方夺权](/articles/voa/1042386.md)
 
