--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+3-22 [涉助日产前董事长逃亡 2美国人在日本被起诉 – 法国国际广播电台 - RFI](/articles/rfi/1033007.md)
+
+3-22 [拉夫罗夫访华微妙？ 华春莹称不针对任何国家](/articles/rfi/1033008.md)
+
+3-22 [巴基斯坦总理夫妇均染新冠病毒](/articles/rfi/1033009.md)
+
 3-22 [台湾传2架F-5E战斗机疑擦撞坠海](/articles/rfi/1033010.md)
 
 3-22 [中国驻法使馆再推控疯狗太多](/articles/rfi/1033011.md)
@@ -594,10 +600,4 @@
 3-16 [香港今民调：林郑支持率跌新低](/articles/rfi/1033305.md)
 
 3-16 [欧洲疫情严峻  逾90万人染疫致死 – 法国国际广播电台 - RFI](/articles/rfi/1033306.md)
-
-3-16 [渥太华对新疆问题发出矛盾信息 - 北美来鸿](/articles/rfi/1033307.md)
-
-3-16 [沙尘暴4天后还要来 笼罩中国西北](/articles/rfi/1033308.md)
-
-3-16 [中美高层会：美国要求中国改善与澳大利亚关系](/articles/rfi/1033309.md)
 
