--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-22 [精英亚裔，成功和地位无法让你们免于仇恨和歧视](/articles/nyt/1047060.md)
+
 3-22 [拜登先生，别再对中国“放狠话”了](/articles/nyt/1047061.md)
 
 3-22 [中韩民众如何看待亚特兰大枪击案](/articles/nyt/1047062.md)
@@ -598,6 +600,4 @@
 1-5 [简报：亚洲面临新一轮疫情危机；聚焦佐治亚州参议员决选](/articles/nyt/1047358.md)
 
 1-4 [想住在海边？你的六个绝佳新选择](/articles/nyt/1047359.md)
-
-1-4 [台湾靠封锁成功抗疫，但能持续多久？](/articles/nyt/1047360.md)
 
