--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+3-22 [杨洁篪呛美金句印上T恤衫 中国商家大发爱国财](/articles/reuters/1040250.md)
+
+3-22 [俄罗斯外长拉夫罗夫展开访华行程 呼吁中俄减少使用美元](/articles/reuters/1040251.md)
+
 3-22 [独家：美国参议员敦促总统拜登设定禁售燃油乘用车的确切日期](/articles/reuters/1040252.md)
 
 3-22 [人民币缩量收创近两周低点 关注本周美核心通胀数据](/articles/reuters/1040253.md)
@@ -596,8 +600,4 @@
 3-15 [焦点：低基数+延续修复助中国经济开年强劲 料政策短期仍重“稳”](/articles/reuters/1040548.md)
 
 3-15 [百度AI芯片部门昆仑完成新一轮融资 业务估值约为20亿美元--消息人士](/articles/reuters/1040549.md)
-
-3-15 [比特币在60,000美元附近盘整 周末创新高后暂作喘息](/articles/reuters/1040550.md)
-
-3-15 [分析：中国央行等额续做MLF中性信号不改 料相机抉择应对地方债“井喷”](/articles/reuters/1040551.md)
 
