--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-22 [无惧军政府血腥镇压 缅甸公民不服从运动如火如荼](/articles/voa/1042080.md)
+
 3-22 [“12港人案”中8人刑期已满被移交港警](/articles/voa/1042081.md)
 
 3-22 [俄罗斯外长访华 呼吁中俄减少使用美元](/articles/voa/1042082.md)
@@ -598,6 +600,4 @@
 3-9 [不做 “政治花瓶”：说了实话的政协委员](/articles/voa/1042378.md)
 
 3-9 [港府：近200名公务员尚未签署效忠香港声明 将安排离职](/articles/voa/1042379.md)
-
-3-8 [蔡英文视察基隆海军基地 誓言“国土主权，寸步不让”](/articles/voa/1042380.md)
 
