--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-22 [贵阳仁爱教会被取缔信徒被拘留   上海一家庭教会被警察冲击](/articles/rfa/1046095.md)
+
 3-22 [台湾绿委引用杨洁篪 反呛中共“台湾不吃这一套”](/articles/rfa/1046096.md)
 
 3-22 [特斯拉成美中会晤后首家被针对美企   解放军点名防范特斯拉汽车](/articles/rfa/1046097.md)
@@ -598,6 +600,4 @@
 2-17 [香港黎智英等九人开庭受审  两人认罪](/articles/rfa/1046393.md)
 
 2-17 [疫情十二月初已爆发？美中交锋世卫忙脱责](/articles/rfa/1046394.md)
-
-2-17 [两加拿大人被拘捕八百天  加拿大华为公司不谴责中国](/articles/rfa/1046395.md)
 
