--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+3-23 [日美罕见明示将合作应对台海冲突](/articles/rfa/1046093.md)
+
+3-22 [哈尔滨 “清除旧规陋习”    清明节前夕严打冥纸冥币](/articles/rfa/1046094.md)
+
 3-22 [贵阳仁爱教会被取缔信徒被拘留   上海一家庭教会被警察冲击](/articles/rfa/1046095.md)
 
 3-22 [台湾绿委引用杨洁篪 反呛中共“台湾不吃这一套”](/articles/rfa/1046096.md)
@@ -596,8 +600,4 @@
 2-17 [讨论：中国汉人了解的新疆是真实的新疆吗？](/articles/rfa/1046391.md)
 
 2-17 [天网黄琦年前与家人通话    狱中状况堪忧](/articles/rfa/1046392.md)
-
-2-17 [香港黎智英等九人开庭受审  两人认罪](/articles/rfa/1046393.md)
-
-2-17 [疫情十二月初已爆发？美中交锋世卫忙脱责](/articles/rfa/1046394.md)
 
