--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+3-23 [俄外长桂林行准备普京习近平峰会](/articles/voa/1042072.md)
+
+3-23 [12港人案8人刑满深圳遣返 家属对港警交接安排感失望](/articles/voa/1042073.md)
+
+3-23 [时事大家谈: 美中对话变对撞，中国“平视世界”开场秀？](/articles/voa/1042074.md)
+
 3-23 [美国劳资博弈的背后 从亚马逊大战工会谈起](/articles/voa/1042075.md)
 
 3-23 [斯里兰卡驻华大使称不会与中国重谈汉班托塔港租赁协议](/articles/voa/1042076.md)
@@ -594,10 +600,4 @@
 3-13 [七国集团就中国修改香港选举制度发表联合声明(全文翻译)](/articles/voa/1042370.md)
 
 3-13 [世卫组织支持使用阿斯利康新冠病毒疫苗](/articles/voa/1042371.md)
-
-3-13 [拜登政府点名华为、中兴等5家公司对美国国安构成威胁](/articles/voa/1042372.md)
-
-3-13 [美国在联合国人权理事会谴责中国虐待维吾尔和藏族人](/articles/voa/1042373.md)
-
-3-13 [乌克兰决定把马达西奇收归国有，避免其落入中国之手](/articles/voa/1042374.md)
 
