--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-23 [中国民兵船疑现身南海 菲律宾促召回](/articles/rfa/1046091.md)
+
 3-23 [康明凯遭秘密审讯   26个国外交官法庭外声援加拿大](/articles/rfa/1046092.md)
 
 3-23 [日美罕见明示将合作应对台海冲突](/articles/rfa/1046093.md)
@@ -598,6 +600,4 @@
 2-17 [地方政府紧跟中央  	天津下令全体党员观看抗美剧](/articles/rfa/1046389.md)
 
 2-17 [美专家：中国国家资本主义威胁全球市场](/articles/rfa/1046390.md)
-
-2-17 [讨论：中国汉人了解的新疆是真实的新疆吗？](/articles/rfa/1046391.md)
 
