--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+3-23 [郑国成事件的启示：“五毛”也难逃中共迫害](/articles/rfa/1046088.md)
+
+3-23 [中国男足、男篮“互撕”    《吐槽大会》遭整改停播](/articles/rfa/1046089.md)
+
+3-23 [中国医务人员接种疫苗后仍感染         高福：可能要补第三针](/articles/rfa/1046090.md)
+
 3-23 [中国民兵船疑现身南海 菲律宾促召回](/articles/rfa/1046091.md)
 
 3-23 [康明凯遭秘密审讯   26个国外交官法庭外声援加拿大](/articles/rfa/1046092.md)
@@ -594,10 +600,4 @@
 2-18 [日本跟进中国“准用武器”  钓鱼台海域对峙升高](/articles/rfa/1046386.md)
 
 2-17 [“有人不希望台湾太高兴” 陈时中：疫苗售台叫停有外力介入](/articles/rfa/1046387.md)
-
-2-17 [茅台酒调教师入围中国工程院院士候选人](/articles/rfa/1046388.md)
-
-2-17 [地方政府紧跟中央  	天津下令全体党员观看抗美剧](/articles/rfa/1046389.md)
-
-2-17 [美专家：中国国家资本主义威胁全球市场](/articles/rfa/1046390.md)
 
