--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-23 [法律园地｜前记者张贾龙被寻衅滋事上诉案，经过两个多月不开庭审理作出宣判](/articles/cdt/384687.md)
+
 3-22 [【CDT推荐】本周推荐媒体](/articles/cdt/384694.md)
 
 3-22 [极昼工作室｜庆阳少女坠楼后，一个父亲的日与夜](/articles/cdt/384696.md)
@@ -598,6 +600,4 @@
 2-9 [【CDT敏感词周报】第十一期：人人影视字幕组、新疆大规模性侵、Clubhouse](/articles/cdt/386083.md)
 
 2-9 [维舟 | 后路](/articles/cdt/386085.md)
-
-2-9 [IdeasInformation | 开了“两岸青年大乱聊” Clubhouse 房间之后的一些思考和学习](/articles/cdt/386086.md)
 
