--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-23 [美英贸易官员通话 谋求合作解决中国的不公平贸易做法](/articles/voa/1042070.md)
+
 3-23 [美国、欧盟和英国制裁被控侵犯维吾尔人权利的中国官员](/articles/voa/1042071.md)
 
 3-23 [俄外长桂林行准备普京习近平峰会](/articles/voa/1042072.md)
@@ -598,6 +600,4 @@
 3-13 [联合国人权调查员敦促国际社会团结起来反对缅甸军政府](/articles/voa/1042368.md)
 
 3-13 [中国黑客攻击更甚俄罗斯 美国底线在哪里？专家呼吁白宫回应](/articles/voa/1042369.md)
-
-3-13 [七国集团就中国修改香港选举制度发表联合声明(全文翻译)](/articles/voa/1042370.md)
 
