--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-23 [欧盟制裁中国侵犯新疆人权官员   中国愤怒并反制裁](/articles/rfa/1046087.md)
+
 3-23 [郑国成事件的启示：“五毛”也难逃中共迫害](/articles/rfa/1046088.md)
 
 3-23 [中国男足、男篮“互撕”    《吐槽大会》遭整改停播](/articles/rfa/1046089.md)
@@ -598,6 +600,4 @@
 2-18 [加拿大抵制北京冬奥声浪加大  三大反对党呼吁另择他国主办](/articles/rfa/1046385.md)
 
 2-18 [日本跟进中国“准用武器”  钓鱼台海域对峙升高](/articles/rfa/1046386.md)
-
-2-17 [“有人不希望台湾太高兴” 陈时中：疫苗售台叫停有外力介入](/articles/rfa/1046387.md)
 
