--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-23 [南风窗｜大学生“涉黑”一审获刑3年6个月，一毕业就进了“黑社会”](/articles/cdt/384686.md)
+
 3-23 [法律园地｜前记者张贾龙被寻衅滋事上诉案，经过两个多月不开庭审理作出宣判](/articles/cdt/384687.md)
 
 3-22 [【CDT推荐】本周推荐媒体](/articles/cdt/384694.md)
@@ -598,6 +600,4 @@
 2-9 [顺水推舟 | 李文亮在烈士陵园名录中被遮盖惹众怒](/articles/cdt/386079.md)
 
 2-9 [【CDT敏感词周报】第十一期：人人影视字幕组、新疆大规模性侵、Clubhouse](/articles/cdt/386083.md)
-
-2-9 [维舟 | 后路](/articles/cdt/386085.md)
 
