--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+3-23 [美联邦通信委员会审议一人权组织提出的对中国央视进行调查的要求](/articles/voa/1042064.md)
+
+3-23 [VOA连线(文灏): 亚特兰大枪击受害者家人募款上百万](/articles/voa/1042065.md)
+
+3-23 [白宫要义: 白宫: 美中会议戏剧化也有实质，与欧盟站在一起制裁中国](/articles/voa/1042066.md)
+
 3-23 [人权活动人士纽约集会声援维吾尔人](/articles/voa/1042067.md)
 
 3-23 [美国再宣布制裁两名缅甸军警官员和两个步兵师](/articles/voa/1042068.md)
@@ -594,10 +600,4 @@
 3-14 [至少8名抗议者被军警打死 四国集团领导人誓言恢复缅甸民主](/articles/voa/1042362.md)
 
 3-13 [至少6名抗议者被打死，美国及盟友誓言恢复民主](/articles/voa/1042363.md)
-
-3-13 [联邦法官要求暂停对小米的投资禁令](/articles/voa/1042364.md)
-
-3-13 [北京修改香港选举制度 美国除言辞谴责外会有何行动？](/articles/voa/1042365.md)
-
-3-13 [美日印澳四方峰会成果多， 拜登打出漂亮的遏制中国组合拳?](/articles/voa/1042366.md)
 
