--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-23 [中央党校反极权先锋人物王贵秀逝世  蔡霞缅怀](/articles/rfa/1046085.md)
+
 3-23 [中国有资格批评美国的种族问题吗？](/articles/rfa/1046086.md)
 
 3-23 [欧盟制裁中国侵犯新疆人权官员   中国愤怒并反制裁](/articles/rfa/1046087.md)
@@ -598,6 +600,4 @@
 2-18 [匈牙利成首用中国疫苗的欧盟国家 欧盟将推第二代疫苗计画因应病毒变异](/articles/rfa/1046383.md)
 
 2-18 [北京小汤山强拆后续：街头露宿母子镇政府门前遇袭](/articles/rfa/1046384.md)
-
-2-18 [加拿大抵制北京冬奥声浪加大  三大反对党呼吁另择他国主办](/articles/rfa/1046385.md)
 
