--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+3-23 [中法外交衝突升级 「战狼」被召见](/articles/dw/1043372.md)
+
+3-23 [美加英欧联合制裁新疆官员 澳纽发声明站队](/articles/dw/1043373.md)
+
 3-23 [欧盟中国相互制裁 欧议员警告欧中协议堪忧](/articles/dw/1043374.md)
 
 3-23 [再次“战狼附体”？中国使馆称不搞“羔羊外交”](/articles/dw/1043375.md)
@@ -596,8 +600,4 @@
 2-28 [飒爽英姿：沙特女性获准当兵](/articles/dw/1043670.md)
 
 2-28 [公主去哪儿了？迪拜光鲜外表下的黑幕](/articles/dw/1043671.md)
-
-2-28 [在土耳其维吾尔人担心被遣返中国](/articles/dw/1043672.md)
-
-2-28 [贝多芬第八交响曲第一乐章](/articles/dw/1043673.md)
 
