--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-23 [美英加三国及澳新两国有关新疆的联合声明(全文翻译)](/articles/voa/1042063.md)
+
 3-23 [美联邦通信委员会审议一人权组织提出的对中国央视进行调查的要求](/articles/voa/1042064.md)
 
 3-23 [VOA连线(文灏): 亚特兰大枪击受害者家人募款上百万](/articles/voa/1042065.md)
@@ -598,6 +600,4 @@
 3-14 [中国将立法制衡西方“长臂管辖”引热议](/articles/voa/1042361.md)
 
 3-14 [至少8名抗议者被军警打死 四国集团领导人誓言恢复缅甸民主](/articles/voa/1042362.md)
-
-3-13 [至少6名抗议者被打死，美国及盟友誓言恢复民主](/articles/voa/1042363.md)
 
