--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-23 [简报：多国因新疆问题制裁中国；科罗拉多枪击案多人死亡](/articles/nyt/1047059.md)
+
 3-22 [精英亚裔，成功和地位无法让你们免于仇恨和歧视](/articles/nyt/1047060.md)
 
 3-22 [拜登先生，别再对中国“放狠话”了](/articles/nyt/1047061.md)
@@ -598,6 +600,4 @@
 1-5 [百人会首任会长、中美“文化外交官”杨雪兰去世](/articles/nyt/1047357.md)
 
 1-5 [简报：亚洲面临新一轮疫情危机；聚焦佐治亚州参议员决选](/articles/nyt/1047358.md)
-
-1-4 [想住在海边？你的六个绝佳新选择](/articles/nyt/1047359.md)
 
