--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+3-23 [美英欧加联手制裁中国新疆官员，拜登“盟友外交”打响第一炮](/articles/voa/1042058.md)
+
+3-23 [柴油产业期待拜登政府清洁能源倡议](/articles/voa/1042059.md)
+
+3-23 [美几大行业协会发表声明 支持以全球方式应对新疆问题](/articles/voa/1042060.md)
+
 3-23 [美众议员提法案将台湾纳入“北约加”国家成员](/articles/voa/1042061.md)
 
 3-23 [中国使馆骂法国研究人员为“小流氓”，“战狼外交”蜕化为“流氓外交“](/articles/voa/1042062.md)
@@ -594,10 +600,4 @@
 3-14 [联合国谴责菲律宾肆意杀害活动人士](/articles/voa/1042356.md)
 
 3-14 [塔利班发动袭击，导致至少22名阿富汗人死亡](/articles/voa/1042357.md)
-
-3-14 [缅甸至少11名抗议人士被军警开枪打死](/articles/voa/1042358.md)
-
-3-14 [俄罗斯指责美国利用信息技术进行不公平竞争 威胁可能屏蔽推特](/articles/voa/1042359.md)
-
-3-14 [中国首次就海警法运用方针通报日方，日中海上“擦枪走火”危险仍未消除](/articles/voa/1042360.md)
 
