--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-23 [国会寻找解决未成年人涌入边境的方案](/articles/voa/1042057.md)
+
 3-23 [美英欧加联手制裁中国新疆官员，拜登“盟友外交”打响第一炮](/articles/voa/1042058.md)
 
 3-23 [柴油产业期待拜登政府清洁能源倡议](/articles/voa/1042059.md)
@@ -598,6 +600,4 @@
 3-14 [奥斯汀：增强与亚洲盟友军事合作以威慑中国](/articles/voa/1042355.md)
 
 3-14 [联合国谴责菲律宾肆意杀害活动人士](/articles/voa/1042356.md)
-
-3-14 [塔利班发动袭击，导致至少22名阿富汗人死亡](/articles/voa/1042357.md)
 
