--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-23 [按摩院里的女性，被边缘化的亚裔](/articles/nyt/1047056.md)
+
 3-23 [美国欧盟等因新疆问题制裁中国，中国反制](/articles/nyt/1047057.md)
 
 3-23 [从“德企之乡“太仓看中德经济联系和隐忧](/articles/nyt/1047058.md)
@@ -598,6 +600,4 @@
 1-5 [五个关键问题，详解佐治亚州参议员决选](/articles/nyt/1047354.md)
 
 1-5 [疫情新常态下，中国版本的“自由”](/articles/nyt/1047355.md)
-
-1-5 [中国威胁吊销12港人自聘律师执照](/articles/nyt/1047356.md)
 
