--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-23 [【麻辣总局】面对俄国女记者的提问 他掏出了自己的小本本儿](/articles/cdt/384672.md)
+
 3-23 [文化先锋｜朱大可：三星堆文明的眼睛巫术——纵目神的崛起](/articles/cdt/384673.md)
 
 3-23 [洋流 | 带妈妈取节育环](/articles/cdt/384676.md)
@@ -598,6 +600,4 @@
 2-9 [猛哥｜关于马金瑜及其它诸般](/articles/cdt/386062.md)
 
 2-9 [全现在 | 平静下的喧哗：缅甸年轻人掀起“噪音运动”，锅底盆底被敲变形](/articles/cdt/386075.md)
-
-2-9 [歪脑 | 如何在最危险的悬崖建立海中小屋：建立微信“反贼群”的年轻人们](/articles/cdt/386077.md)
 
