--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-23 [不满中国反制裁 欧洲议会临时取消审议中欧全面投资协定](/articles/voa/1042055.md)
+
 3-23 [协调盟友旗开得胜后 布林肯抵达布鲁塞尔探讨应对中国挑战的下一步行动](/articles/voa/1042056.md)
 
 3-23 [国会寻找解决未成年人涌入边境的方案](/articles/voa/1042057.md)
@@ -598,6 +600,4 @@
 3-14 [习近平的“东升西降”世界观与现实的矛盾](/articles/voa/1042353.md)
 
 3-14 [中国外交部：打中国疫苗好办中国签证](/articles/voa/1042354.md)
-
-3-14 [奥斯汀：增强与亚洲盟友军事合作以威慑中国](/articles/voa/1042355.md)
 
