--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+3-23 [哔哩哔哩赴港二次上市寻求募资26亿美元](/articles/ft/1045865.md)
+
 3-23 [马达西奇收购案索赔：中企用债务锁定战略资产](/articles/ft/1045866.md)
 
 3-23 [疫情加剧职场年龄歧视](/articles/ft/1045867.md)
@@ -598,6 +600,4 @@
 1-29 [法国西班牙第四季度经济数据好于预期](/articles/ft/1046163.md)
 
 1-29 [新研究显示欧洲5G铺设落后于美国和亚洲](/articles/ft/1046164.md)
-
-1-29 [如何弥补美国民主的缺陷？](/articles/ft/1046165.md)
 
