--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-23 [女辅警“勒索案”：正义审判，还是对穷人判决？](/articles/voa/1042052.md)
+
 3-23 [科罗拉多州枪击案导致10人丧生 国会今日起展开一系列听证会](/articles/voa/1042053.md)
 
 3-23 [台湾跨党派立法委员支持增修香港人权及民主条款](/articles/voa/1042054.md)
@@ -598,6 +600,4 @@
 3-15 [担心被用于军事目的 缅甸首颗卫星被日本扣留](/articles/voa/1042350.md)
 
 3-14 [朝鲜据称对美国的接触尝试未予回应 拜登政府缓解朝鲜核僵局努力引质疑](/articles/voa/1042351.md)
-
-3-14 [美联社：美国务卿和防长首次外访面临中国和朝鲜日渐增大的威胁](/articles/voa/1042352.md)
 
