--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-23 [奇客资讯｜加速主义关键词遭遇有组织的水军污染和攻击](/articles/cdt/384662.md)
+
 3-23 [【异闻观止】外交部回应美欧加英制裁：终将为其愚蠢和傲慢付出代价](/articles/cdt/384667.md)
 
 3-23 [【麻辣总局】面对俄国女记者的提问 他掏出了自己的小本本儿](/articles/cdt/384672.md)
@@ -598,6 +600,4 @@
 2-9 [【立此存照】胡锡进：完全不受控的互联网言论平台在今天中国不可能出现](/articles/cdt/386055.md)
 
 2-9 [【旧文重温】Matters｜黄章晋：再见，伊力哈木](/articles/cdt/386056.md)
-
-2-9 [猛哥｜关于马金瑜及其它诸般](/articles/cdt/386062.md)
 
