--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-23 [中国产疫苗信不过  地方官强制居民接种](/articles/rfa/1046081.md)
+
 3-23 [中共百年党庆无阅兵	异常低调引多方猜测](/articles/rfa/1046082.md)
 
 3-23 [台湾2架F-5E擦撞1殉职1失联  蔡英文：全力搜救 厘清事故](/articles/rfa/1046083.md)
@@ -598,6 +600,4 @@
 2-18 [“习近平女儿信息泄露案”   家长公开信喊冤](/articles/rfa/1046379.md)
 
 2-18 [学者：没有美国的技术 中国飞机制造业需重新开始](/articles/rfa/1046380.md)
-
-2-18 [华为启动“南泥湾”计划自救  做手机的要去养猪](/articles/rfa/1046381.md)
 
