--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-23 [美国在南中国海新争端中支持菲律宾 称中国破坏地区安全](/articles/voa/1042049.md)
+
 3-23 [俄中抱团 两国将共同对抗西方的指责和制裁](/articles/voa/1042050.md)
 
 3-23 [扑朔迷离的“国之大者”](/articles/voa/1042051.md)
@@ -598,6 +600,4 @@
 3-15 [弗契医生：美国很快就会恢复正常，但不能过早放宽新冠限制措施](/articles/voa/1042347.md)
 
 3-15 [孟晚舟请求法庭接受华为员工证词 加拿大法官驳回请求](/articles/voa/1042348.md)
-
-3-15 [中国试图收购“西奇” 乌克兰将其收归国有](/articles/voa/1042349.md)
 
