--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+3-24 [俄罗斯总统蒲亭将注射疫苗 但不公开 – 法国国际广播电台 - RFI](/articles/rfi/1032910.md)
+
+3-24 [美科罗拉多州10死枪击案 警方公布凶嫌姓名年龄 – 法国国际广播电台 - RFI](/articles/rfi/1032911.md)
+
 3-24 [中国报复制裁欧盟 遭制裁者怎么说](/articles/rfi/1032912.md)
 
 3-24 [美国议员大胆提议将台湾纳入北约保护圈](/articles/rfi/1032913.md)
@@ -596,8 +600,4 @@
 3-18 [渥太华对新疆问题发出矛盾信息 - 北美来鸿](/articles/rfi/1033208.md)
 
 3-18 [中国环球电视网为何在欧美频受质疑？ - 公民论坛](/articles/rfi/1033209.md)
-
-3-18 [法国专家：拜登对华路线很清晰 欧洲对台海局势态度应更明确 - 国际纵横](/articles/rfi/1033210.md)
-
-3-18 [从《无依之地》看“铁锈地带” - 美国专栏](/articles/rfi/1033211.md)
 
