--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+3-24 [中国大使推文大肆批评议员 法国外交部召见 – 法国国际广播电台 - RFI](/articles/rfi/1032909.md)
+
 3-24 [俄罗斯总统蒲亭将注射疫苗 但不公开 – 法国国际广播电台 - RFI](/articles/rfi/1032910.md)
 
 3-24 [美科罗拉多州10死枪击案 警方公布凶嫌姓名年龄 – 法国国际广播电台 - RFI](/articles/rfi/1032911.md)
@@ -598,6 +600,4 @@
 3-18 [法国似乎罹患另一种病 超级高文凭大头症 - 法国风土人情](/articles/rfi/1033207.md)
 
 3-18 [渥太华对新疆问题发出矛盾信息 - 北美来鸿](/articles/rfi/1033208.md)
-
-3-18 [中国环球电视网为何在欧美频受质疑？ - 公民论坛](/articles/rfi/1033209.md)
 
