--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-24 [中国战狼满世界咆啸  重回文革变国际孤狼？](/articles/rfa/1046073.md)
+
 3-24 [民营企业家李怀庆家属控告警方罗织罪名、侵占私产](/articles/rfa/1046074.md)
 
 3-24 [广州明经村爆炸案：村委会遇袭 村支书伤势严重](/articles/rfa/1046075.md)
@@ -598,6 +600,4 @@
 2-18 [“反美”教授陈平得州安家 遭嘲反美是工作 赴美是生活](/articles/rfa/1046371.md)
 
 2-18 [国民党主席江启臣 获选《时代》杂志次世代领导人](/articles/rfa/1046372.md)
-
-2-18 [开展新一轮造神运动   央媒合制 “平语近人”](/articles/rfa/1046373.md)
 
