--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-24 [美国之音 | 美英欧加联手制裁中国新疆官员，拜登“盟友外交”打响第一炮](/articles/cdt/384646.md)
+
 3-23 [奇客资讯｜加速主义关键词遭遇有组织的水军污染和攻击](/articles/cdt/384662.md)
 
 3-23 [【404文库】红星新闻｜独家对话”敲诈多名公职人员”女辅警父亲](/articles/cdt/384666.md)
@@ -598,6 +600,4 @@
 2-10 [笨妈育儿育己 | 马金瑜事件旁观者：去解决施暴者，而不是受害者](/articles/cdt/386049.md)
 
 2-9 [耿潇男：我以自由为人生的标配](/articles/cdt/386051.md)
-
-2-9 [【立此存照】胡锡进：完全不受控的互联网言论平台在今天中国不可能出现](/articles/cdt/386055.md)
 
