--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+3-24 [利空出 日股开低 – 法国国际广播电台 - RFI](/articles/rfi/1032893.md)
+
+3-24 [巴西过去24小时染疫致死逾3000人 创新高纪录 – 法国国际广播电台 - RFI](/articles/rfi/1032894.md)
+
 3-24 [美国印太司令提名人阿基里诺：美国应持续对台军售](/articles/rfi/1032895.md)
 
 3-24 [欧盟扬言禁阿斯利康疫苗出口  德国总理默克尔力挺](/articles/rfi/1032896.md)
@@ -596,8 +600,4 @@
 3-18 [联合声明指中方行为不符国际秩序 赵立坚批美日“狼狈为奸”](/articles/rfi/1033191.md)
 
 3-18 [缅甸反政变示威民众展开反击](/articles/rfi/1033192.md)
-
-3-18 [布林肯更新《香港自治法》报告，将24名中港官员列入制裁名单](/articles/rfi/1033193.md)
-
-3-18 [黎巴嫩货币汇率又探底 民众失望愤怒](/articles/rfi/1033194.md)
 
