--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-24 [台外长感谢美国国会议员提案 并希望增强双方安全合作关系](/articles/voa/1042023.md)
+
 3-24 [北约秘书长：北约团结一致完全有能力应对中国的崛起和挑战](/articles/voa/1042024.md)
 
 3-24 [“北京在缓慢摧毁维吾尔民族” 新疆出生率暴跌的背后](/articles/voa/1042025.md)
@@ -598,6 +600,4 @@
 3-16 [共和党人呼吁拜登强硬对待北京 库什纳：把中国列为优先议题就对了](/articles/voa/1042321.md)
 
 3-16 [白宫新冠疫情团队对美国旅行人数大增表示关注](/articles/voa/1042322.md)
-
-3-16 [因疫情造成芯片短缺 通用公司将制造某些无燃料管理模块的皮卡](/articles/voa/1042323.md)
 
