--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+3-24 [中共开动大外宣机器    油管突现大量视频宣扬新疆“美好生活”](/articles/rfa/1046068.md)
+
+3-24 [中国大肆宣传三星堆为“中华文化”  学界对起源仍高度分歧](/articles/rfa/1046069.md)
+
 3-24 [美国印太司令提名人阐述对华立场](/articles/rfa/1046070.md)
 
 3-24 [不满中国反制裁     欧中投资协定审议被叫停](/articles/rfa/1046071.md)
@@ -596,8 +600,4 @@
 2-19 [法学家发起网络公投: 国民制宪  和平转型](/articles/rfa/1046366.md)
 
 2-19 [美国组全球抗中同盟  杨洁篪出访四国也没闲着](/articles/rfa/1046367.md)
-
-2-19 [美议员：美中有针对性脱钩势在必行](/articles/rfa/1046368.md)
-
-2-19 [美议员重提《防止台湾遭侵略法案》](/articles/rfa/1046369.md)
 
