--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-24 [【网络民议】STOP YUEJIPENGCI XIN JIANG COTTON](/articles/cdt/384622.md)
+
 3-24 [【异闻观止】网信中国｜国家网信办：2月以来下架App520余个](/articles/cdt/384632.md)
 
 3-24 [极昼工作室 | 不服从的一刻钟](/articles/cdt/384633.md)
@@ -598,6 +600,4 @@
 2-10 [极昼工作室｜北京西站“静悄悄”](/articles/cdt/386038.md)
 
 2-10 [Fuck GFW｜ClubHouse被封后如何翻墙听？Shadowrocket上的相关设置](/articles/cdt/386044.md)
-
-2-10 [界面新闻 | 马金瑜回应质疑：我怕被笑话，不愿承认自己是弱者](/articles/cdt/386046.md)
 
