--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+3-24 [客座评论：“平视”之后，中美真正的差距](/articles/dw/1043348.md)
+
+3-24 [德国总理默克尔呼吁民众团结抗疫](/articles/dw/1043349.md)
+
 3-24 [欧中交恶 投资协议还有戏吗？](/articles/dw/1043350.md)
 
 3-24 [英特尔投资200亿美元盖厂  挑战台积电?](/articles/dw/1043351.md)
@@ -596,8 +600,4 @@
 3-1 [民意汹涌扛不住？德副总理要求改变抗疫战略](/articles/dw/1043646.md)
 
 3-1 [昂山素季遭追加指控 周一再度视频受审](/articles/dw/1043647.md)
-
-3-1 [香港反对派47人出庭  千人庭外支持](/articles/dw/1043648.md)
-
-3-1 [美专家：中国加强提升应对核攻击的反应能力](/articles/dw/1043649.md)
 
