--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-24 [涉元朗事件调查报导 港台编导虚假陈述案开庭](/articles/dw/1043347.md)
+
 3-24 [客座评论：“平视”之后，中美真正的差距](/articles/dw/1043348.md)
 
 3-24 [德国总理默克尔呼吁民众团结抗疫](/articles/dw/1043349.md)
@@ -598,6 +600,4 @@
 3-1 [德语媒体：北京危险的统一梦](/articles/dw/1043645.md)
 
 3-1 [民意汹涌扛不住？德副总理要求改变抗疫战略](/articles/dw/1043646.md)
-
-3-1 [昂山素季遭追加指控 周一再度视频受审](/articles/dw/1043647.md)
 
