--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+3-24 [瑞士推出外交战略涉及人权关注遭中国斥责](/articles/rfi/1032862.md)
+
+3-24 [长荣货轮困苏伊士运河 没传出人员受伤污染外泄 – 法国国际广播电台 - RFI](/articles/rfi/1032863.md)
+
+3-24 [亚股跌多涨少 – 法国国际广播电台 - RFI](/articles/rfi/1032864.md)
+
+3-24 [日美高官就对华通商政策等举行会谈](/articles/rfi/1032865.md)
+
 3-24 [法官再驳回孟晚舟律师团新诉求](/articles/rfi/1032866.md)
 
 3-24 [步马云之后？腾讯老板马化腾本月会晤了中国反垄断官员](/articles/rfi/1032867.md)
@@ -592,12 +600,4 @@
 3-19 [欧盟与土耳其难民协议 安卡拉新思路](/articles/rfi/1033160.md)
 
 3-18 [维权协会在斯特拉斯堡游行 抗议华为将在阿尔萨斯建厂](/articles/rfi/1033161.md)
-
-3-18 [被拜登说是刽子手 蒲亭回呛：你在说你自己 – 法国国际广播电台 - RFI](/articles/rfi/1033162.md)
-
-3-18 [全球COVID-19累计近1亿2121万例确诊 268万多人病故 – 法国国际广播电台 - RFI](/articles/rfi/1033163.md)
-
-3-18 [控拜登纾困案侵害地方财政权  俄州开第一炮提告 – 法国国际广播电台 - RFI](/articles/rfi/1033164.md)
-
-3-18 [叶门叛军开条件：停火可以  但先解除封锁 – 法国国际广播电台 - RFI](/articles/rfi/1033165.md)
 
