--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-24 [印度总理致信巴基斯坦总理：渴望亲密友好关系](/articles/dw/1043346.md)
+
 3-24 [涉元朗事件调查报导 港台编导虚假陈述案开庭](/articles/dw/1043347.md)
 
 3-24 [客座评论：“平视”之后，中美真正的差距](/articles/dw/1043348.md)
@@ -598,6 +600,4 @@
 3-1 [驻华记者协会：中国的新闻自由急剧恶化](/articles/dw/1043644.md)
 
 3-1 [德语媒体：北京危险的统一梦](/articles/dw/1043645.md)
-
-3-1 [民意汹涌扛不住？德副总理要求改变抗疫战略](/articles/dw/1043646.md)
 
