--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-24 [港府宣布暂停接种复必泰疫苗](/articles/voa/1042020.md)
+
+3-24 [“中国人不吃这一套”，分析：用江湖语言鼓动民粹主义](/articles/voa/1042021.md)
+
 3-24 [“中国人不吃这一套”引发民族主义情绪和网红商品](/articles/voa/1042022.md)
 
 3-24 [台外长感谢美国国会议员提案 并希望增强双方安全合作关系](/articles/voa/1042023.md)
@@ -596,8 +600,4 @@
 3-16 [不顾各方警告？美科技行业多数人支持与中国合作](/articles/voa/1042318.md)
 
 3-16 [联邦当局指控两名嫌疑人在国会骚乱事件中袭警 其中一名警察死亡](/articles/voa/1042319.md)
-
-3-16 [中国法律活动人士许志永的女友李翘楚被正式批准逮捕](/articles/voa/1042320.md)
-
-3-16 [共和党人呼吁拜登强硬对待北京 库什纳：把中国列为优先议题就对了](/articles/voa/1042321.md)
 
