--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-24 [公开上海公务员餐厅饭菜价格被指“泄密” 网民被抓](/articles/rfa/1046066.md)
+
 3-24 [《理大围城》获选台湾国际纪录片影展开幕片 策展人：不要忘了香港](/articles/rfa/1046067.md)
 
 3-24 [中共开动大外宣机器    油管突现大量视频宣扬新疆“美好生活”](/articles/rfa/1046068.md)
@@ -598,6 +600,4 @@
 2-19 [韩国前外交官：夹在美中之间的韩国应向美靠拢](/articles/rfa/1046364.md)
 
 2-19 [宗教“中国化”抵达海南 穆斯林受打压](/articles/rfa/1046365.md)
-
-2-19 [法学家发起网络公投: 国民制宪  和平转型](/articles/rfa/1046366.md)
 
