--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-24 [为避免流血事件 缅甸人发起无声罢工的反政变抗议活动](/articles/voa/1042018.md)
+
+3-24 [美众议院议长佩洛西就国际社会对中国迫害新疆维吾尔人实施制裁发表声明](/articles/voa/1042019.md)
+
 3-24 [港府宣布暂停接种复必泰疫苗](/articles/voa/1042020.md)
 
 3-24 [“中国人不吃这一套”，分析：用江湖语言鼓动民粹主义](/articles/voa/1042021.md)
@@ -596,8 +600,4 @@
 3-16 [白宫要义: 拜登推广美国救援方案，白宫证实美朝一年无互动”](/articles/voa/1042316.md)
 
 3-16 [“中国制造”与强迫劳动：廉价商品背后的血与泪](/articles/voa/1042317.md)
-
-3-16 [不顾各方警告？美科技行业多数人支持与中国合作](/articles/voa/1042318.md)
-
-3-16 [联邦当局指控两名嫌疑人在国会骚乱事件中袭警 其中一名警察死亡](/articles/voa/1042319.md)
 
