--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-24 [当局正调查科罗拉多州枪击案被控男子的背景](/articles/voa/1042017.md)
+
 3-24 [为避免流血事件 缅甸人发起无声罢工的反政变抗议活动](/articles/voa/1042018.md)
 
 3-24 [美众议院议长佩洛西就国际社会对中国迫害新疆维吾尔人实施制裁发表声明](/articles/voa/1042019.md)
@@ -598,6 +600,4 @@
 3-16 [缅甸当局切断互联网服务 为恢复秩序噤声制止抗议](/articles/voa/1042315.md)
 
 3-16 [白宫要义: 拜登推广美国救援方案，白宫证实美朝一年无互动”](/articles/voa/1042316.md)
-
-3-16 [“中国制造”与强迫劳动：廉价商品背后的血与泪](/articles/voa/1042317.md)
 
