--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+3-25 [德语媒体：依赖关系让道德批评失去作用](/articles/dw/1043335.md)
+
+3-24 [远离新疆供应链 H&M在中国遭抵制](/articles/dw/1043336.md)
+
+3-24 [缅甸军政府释放600多名示威者](/articles/dw/1043337.md)
+
 3-24 [抗疫不利兼口罩丑闻危及德联盟党](/articles/dw/1043338.md)
 
 3-24 [专访：穿“我不是中国人”的T恤并不会免遭歧视](/articles/dw/1043339.md)
@@ -594,10 +600,4 @@
 3-2 [国安法生效后大抓捕 香港民主派路在何方？](/articles/dw/1043633.md)
 
 3-2 [凭借新冠疫情修复中美关系？](/articles/dw/1043634.md)
-
-3-2 [国安法生效後最大抓捕 民主派急需新运作空间](/articles/dw/1043635.md)
-
-3-2 [香港民主派初选案提堂 多国代表吁北京撤告](/articles/dw/1043636.md)
-
-3-2 [美国国安委员会：大学应防中国窃取技术](/articles/dw/1043637.md)
 
