--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,18 @@
 法广
 ------
 
+3-25 [法国新冠病毒 又一部长中标 巴舍洛特确诊住院](/articles/rfi/1032842.md)
+
+3-25 [俄罗斯下议院通过法案 为蒲亭掌权至2036年铺路 – 法国国际广播电台 - RFI](/articles/rfi/1032843.md)
+
+3-25 [瑞萨工厂火灾 恐令全球晶片短缺雪上加霜 – 法国国际广播电台 - RFI](/articles/rfi/1032844.md)
+
+3-25 [全球COVID-19累计超过273万人病故 – 法国国际广播电台 - RFI](/articles/rfi/1032845.md)
+
+3-24 [中国发布“美国侵犯人权报告” 控6大罪状](/articles/rfi/1032846.md)
+
+3-24 [220艘渔船集结牛轭礁 菲律宾不相信躲雨说 担忧占领前奏](/articles/rfi/1032847.md)
+
 3-24 [H&amp;M拒用新疆棉 中国报复抵制共青团再吼不吃这一套](/articles/rfi/1032848.md)
 
 3-24 [中国突然发力加大宣传新疆“美好生活”？](/articles/rfi/1032849.md)
@@ -588,16 +600,4 @@
 3-19 [欧盟药品管理局称阿斯利康疫苗安全有效 法德等国纷纷恢复接种阿斯利康疫苗](/articles/rfi/1033140.md)
 
 3-19 [中美高层战略对话今天举行 习近平与拜登会面议题未列议程](/articles/rfi/1033141.md)
-
-3-19 [以身作则！法国总理卡斯泰将于3月19日星期五接种阿斯利康疫苗](/articles/rfi/1033142.md)
-
-3-19 [美国液化天然气准备进军巴尔干地区](/articles/rfi/1033143.md)
-
-3-19 [维权协会在斯特拉斯堡游行 抗议华为将在阿尔萨斯建厂](/articles/rfi/1033144.md)
-
-3-19 [美国传唤多家中国电信企业，开始撤销两家中企在美经营权](/articles/rfi/1033145.md)
-
-3-19 [华日：中方计划要求撤特朗普对华措施, 拜习4月线上峰会](/articles/rfi/1033146.md)
-
-3-19 [沙利文通报北约秘书长阿拉斯加会晤 北约发布2020年度报告](/articles/rfi/1033147.md)
 
