--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-24 [台湾政府拟资助友邦购买非中国产疫苗](/articles/voa/1042015.md)
+
+3-24 [美国贸易代表与日法等国官员对话 讨论中国贸易行为和人权等问题](/articles/voa/1042016.md)
+
 3-24 [当局正调查科罗拉多州枪击案被控男子的背景](/articles/voa/1042017.md)
 
 3-24 [为避免流血事件 缅甸人发起无声罢工的反政变抗议活动](/articles/voa/1042018.md)
@@ -596,8 +600,4 @@
 3-16 [拜登拒绝就纽约州长应否辞职做出表态](/articles/voa/1042313.md)
 
 3-16 [VOA连线(许湘筠): 流亡港人发布《2021香港约章》呼吁团结](/articles/voa/1042314.md)
-
-3-16 [缅甸当局切断互联网服务 为恢复秩序噤声制止抗议](/articles/voa/1042315.md)
-
-3-16 [白宫要义: 拜登推广美国救援方案，白宫证实美朝一年无互动”](/articles/voa/1042316.md)
 
