--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-25 [中式没品笑话百科｜中国人还能穿哪一套？](/articles/cdt/384610.md)
+
 3-24 [头牛关注｜某单位食堂菜价“泄密”，网友惊呼“长见识了”！](/articles/cdt/384612.md)
 
 3-24 [【网络民议】STOP YUEJIPENGCI XIN JIANG COTTON](/articles/cdt/384622.md)
@@ -598,6 +600,4 @@
 2-10 [三上文存｜没有恶意的欠薪，哪来的恶意讨薪？](/articles/cdt/386036.md)
 
 2-10 [DT财经｜数据为证，我找不到对象真的不赖我](/articles/cdt/386037.md)
-
-2-10 [极昼工作室｜北京西站“静悄悄”](/articles/cdt/386038.md)
 
