--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+3-25 [以色列2021立法选举 内塔尼亚胡当先](/articles/rfi/1032839.md)
+
 3-25 [侯芷明： 郑若麟造谣诬蔑格律克兹曼制造犹太人阴谋论是不负责任的行为](/articles/rfi/1032840.md)
 
 3-25 [美国对朝鲜新的短程导弹试射镇定自如](/articles/rfi/1032841.md)
@@ -598,6 +600,4 @@
 3-19 [德国第三波新冠疫情来势凶猛](/articles/rfi/1033137.md)
 
 3-19 [冰岛欢迎持Covid疫苗接种证明旅客](/articles/rfi/1033138.md)
-
-3-19 [法国宣布巴黎大区在内的16省&quot;封城&quot;应对疫情快速蔓延](/articles/rfi/1033139.md)
 
