--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+3-25 [美官员：世卫组织新冠病毒源头调查需要进一步研究](/articles/voa/1042001.md)
+
+3-25 [朝鲜试射导弹 是对拜登的挑衅吗？](/articles/voa/1042002.md)
+
+3-25 [拜登上任后的首场记者会为何迟迟才来？](/articles/voa/1042003.md)
+
 3-25 [美中气候特使见而未谈 专家：两国紧张或增加合作难度](/articles/voa/1042004.md)
 
 3-25 [街头遭袭后奋勇反击的亚裔奶奶将把90万美元募款捐给亚太裔社区](/articles/voa/1042005.md)
@@ -594,10 +600,4 @@
 3-16 [联合国：缅甸政变导致食品和燃料价格上涨](/articles/voa/1042299.md)
 
 3-16 [美国要求中国改善与澳大利亚关系 否则美中关系不会改善](/articles/voa/1042300.md)
-
-3-16 [中国因“涉疆谣言”起诉德国学者 是新策略还是作秀？](/articles/voa/1042301.md)
-
-3-16 [反垄断开铡 中国恐强力整顿网络巨头阿里巴巴](/articles/voa/1042302.md)
-
-3-16 [美日举行高层会谈 布林肯：共同应对中国威胁将两国带到一起](/articles/voa/1042303.md)
 
