--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,28 @@
 路透
 ------
 
+3-25 [美国三大股指齐收低 科技股连续第二天下跌](/articles/reuters/1040136.md)
+
+3-25 [油价上涨逾3美元 此前一集装箱船在苏伊士河搁浅阻挡航道](/articles/reuters/1040137.md)
+
+3-25 [金价上涨 鲍威尔证词盖过美元和美债收益率上涨影响](/articles/reuters/1040138.md)
+
+3-25 [焦点：美国国务卿布林肯称美国不会强迫北约盟友在中美之间“选边站”](/articles/reuters/1040139.md)
+
+3-25 [Facebook称中国黑客利用其平台对海外维族人进行网络攻击](/articles/reuters/1040140.md)
+
+3-25 [朝鲜发射导弹对地区安全构成威胁--日本首相](/articles/reuters/1040141.md)
+
+3-25 [路透测算的人民币中间价料开在6.5289元附近 较上日贬61点](/articles/reuters/1040142.md)
+
+3-25 [H&M抵制新疆棉花在中国社群媒体掀起怒潮 回应称“不代表任何政治立场”](/articles/reuters/1040143.md)
+
+3-25 [安踏体育称将退出良棉协会 此前H&M因声明暂停用新疆棉花遭中国抵制](/articles/reuters/1040144.md)
+
+3-25 [中国字节跳动延揽前小米副总裁周受资出任CFO](/articles/reuters/1040145.md)
+
+3-25 [小米第四季经调整净利同比增37% 增持子公司助力5G+AIoT发展](/articles/reuters/1040146.md)
+
 3-24 [矽谷自动驾驶卡车初创公司Kodiak与中国激光雷达制造商禾赛科技达成合作](/articles/reuters/1040147.md)
 
 3-24 [哔哩哔哩将于3月29日首日挂牌 相关期货期权、衍生权证及沽空同日推出](/articles/reuters/1040148.md)
@@ -578,26 +600,4 @@
 3-17 [市场观望气氛浓人民币收盘小跌 聚焦美联储决议及中美对话](/articles/reuters/1040434.md)
 
 3-17 [全球金融中心指数榜出炉 纽约续占榜首、港京深排名皆有提升](/articles/reuters/1040435.md)
-
-3-17 [沪综指收盘近持平 市场聚焦美联储会议及中美会谈](/articles/reuters/1040436.md)
-
-3-17 [美联储心之向往：1970年代那样的强增长、弱通胀](/articles/reuters/1040437.md)
-
-3-17 [对美日联合声明中国外交部称已提出严正交涉 敦促两国停止针对中国的“小圈子”](/articles/reuters/1040438.md)
-
-3-17 [中国“接近”推出南向债券通--债券通公司总经理](/articles/reuters/1040439.md)
-
-3-17 [中国2020年芯片产业销售额增长17.8%--半导体行业协会理事长](/articles/reuters/1040440.md)
-
-3-17 [美方将在阿拉斯加中美高层会晤时采取“不妥协”的立场--美国官员](/articles/reuters/1040441.md)
-
-3-17 [深圳传音控股成首家本外币一体化资金池试点企业 渣打为首家外资合作行](/articles/reuters/1040442.md)
-
-3-17 [分析：美国刺激政策对欧洲应利大于弊 但欧洲需先控制住疫情](/articles/reuters/1040443.md)
-
-3-17 [辉瑞决定停止在中国生产生物仿制药 将资产售予药明生物（更新版）](/articles/reuters/1040444.md)
-
-3-17 [焦点：疫情支票怎么花？ 提心吊胆的美国人打算用来还债和交税](/articles/reuters/1040445.md)
-
-3-17 [百度赴香港第二上市招股价定价252港元 集资30.8亿美元--消息](/articles/reuters/1040446.md)
 
