--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+3-25 [脸书:中国骇客利用假冒手法侵入维吾尔人电脑手机](/articles/voa/1041995.md)
+
+3-25 [VOA连线(许湘筠): 控枪团体呼吁制定联邦层级背景审查法](/articles/voa/1041996.md)
+
+3-25 [白宫要义: 布林肯向拜登通报阿拉斯加会议内涵 欧洲之行仍着重中国](/articles/voa/1041997.md)
+
+3-25 [美国将与邻国共享新冠疫苗](/articles/voa/1041998.md)
+
 3-25 [美国证交会开始推出将中国公司摘牌的规定](/articles/voa/1041999.md)
 
 3-25 [研究报告：美国未能有效对抗中国的地缘政治崛起](/articles/voa/1042000.md)
@@ -592,12 +600,4 @@
 3-17 [香港政坛元老谈北京修改选制 刘慧卿批伊朗式选举曾钰成对普选仍乐观](/articles/voa/1042293.md)
 
 3-17 [时事大家谈: 北京终结香港民主，西方除了谴责还能做些什么？](/articles/voa/1042294.md)
-
-3-17 [台湾潜舰国造“红区”装备获美国输出许可](/articles/voa/1042295.md)
-
-3-17 [香港失业率攀升至17年最高点 特首林郑月娥支持率不足两成](/articles/voa/1042296.md)
-
-3-17 [英国公布外交国防政策检视报告 向印太地区倾斜抗衡中国](/articles/voa/1042297.md)
-
-3-17 [中国加强网络控制“再下一城” 加密通讯应用程序Signal疑似被封](/articles/voa/1042298.md)
 
