--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+3-25 [普京总统写真的艺术](/articles/nyt/1047046.md)
+
+3-25 [简报：H&M在中国遭抵制；香港暂停接种复必泰新冠疫苗](/articles/nyt/1047047.md)
+
 3-24 [科罗拉多枪击案幸存者：“听着他杀死所有你认识的人”](/articles/nyt/1047048.md)
 
 3-24 [我父母这代亚裔认为我们只能自保，我不这么想](/articles/nyt/1047049.md)
@@ -596,8 +600,4 @@
 1-7 [简报：特朗普支持者冲击国会大厦；香港一日之内逮捕53人](/articles/nyt/1047344.md)
 
 1-6 [那些可耻的“政变策划者”共和党人](/articles/nyt/1047345.md)
-
-1-6 [彭斯有可能推翻总统大选结果吗？](/articles/nyt/1047346.md)
-
-1-6 [从火星到月球，一个忙碌的太空探索之年](/articles/nyt/1047347.md)
 
