--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-25 [在维吾尔人的强烈抗议声中，土耳其同中国经济关系加深](/articles/voa/1041993.md)
+
+3-25 [美欧重启关于中国的对话](/articles/voa/1041994.md)
+
 3-25 [脸书:中国骇客利用假冒手法侵入维吾尔人电脑手机](/articles/voa/1041995.md)
 
 3-25 [VOA连线(许湘筠): 控枪团体呼吁制定联邦层级背景审查法](/articles/voa/1041996.md)
@@ -596,8 +600,4 @@
 3-17 [哈里斯副总统对联合国妇女会议讲话：妇女地位即民主地位](/articles/voa/1042291.md)
 
 3-17 [欧洲药管局长：阿斯利康新冠疫苗益处远大于风险](/articles/voa/1042292.md)
-
-3-17 [香港政坛元老谈北京修改选制 刘慧卿批伊朗式选举曾钰成对普选仍乐观](/articles/voa/1042293.md)
-
-3-17 [时事大家谈: 北京终结香港民主，西方除了谴责还能做些什么？](/articles/voa/1042294.md)
 
